@@ -81,6 +81,19 @@
   return [userRights containsObject: SOGoRole_ObjectViewer];
 }
 
+- (void) setUserCanReadObjects: (BOOL) userCanReadObjects
+{
+  if (userCanReadObjects)
+    [self appendRight: SOGoRole_ObjectReader];
+  else
+    [self removeRight: SOGoRole_ObjectReader];
+}
+
+- (BOOL) userCanReadObjects
+{
+  return [userRights containsObject: SOGoRole_ObjectReader];
+}
+
 - (void) updateRights
 {
   WORequest *request;
@@ -101,6 +114,11 @@
     [self appendRight: SOGoRole_ObjectViewer];
   else
     [self removeRight: SOGoRole_ObjectViewer];
+
+  if ([[request formValueForKey: @"ObjectReader"] length] > 0)
+    [self appendRight: SOGoRole_ObjectReader];
+  else
+    [self removeRight: SOGoRole_ObjectReader];
 
   if ([[request formValueForKey: @"ObjectEraser"] length] > 0)
     [self appendRight: SOGoRole_ObjectEraser];
